RESOLVED FIXED301027
Fix UniqueIDBDatabaseTransaction error: finished request count is bigger than total request count
https://bugs.webkit.org/show_bug.cgi?id=301027
Summary Fix UniqueIDBDatabaseTransaction error: finished request count is bigger than...
Sihui Liu
Reported 2025-10-17 21:05:25 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-17 21:13:10 PDT
Sihui Liu
Comment 2 2025-10-17 21:48:00 PDT
EWS
Comment 3 2025-10-20 13:30:26 PDT
Committed 301820@main (4acb9114542c): <https://commits.webkit.org/301820@main> Reviewed commits have been landed. Closing PR #52603 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.